feat: player support, picture-in-picture support